# inspirational-quotes-image-generator

./: README.md  img_utils.py  main.py  pyproject.toml  requirements.txt
assets/: quotes.csv
